--- a/Day 11 - 15.ipynb
+++ b/Day 11 - 15.ipynb
@@ -654,14 +654,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Finding tests in NoName\nTrying:\n    to_binary(12, 4)\nExpecting:\n    '1100'\nok\nTrying:\n    to_binary(12, 6)\nExpecting:\n    '001100'\nok\nFinding tests in NoName\nTrying:\n    apply_mask(11, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\nExpecting:\n    73\nok\nTrying:\n    apply_mask(101, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\nExpecting:\n    101\nok\nTrying:\n    apply_mask(0, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\nExpecting:\n    64\nok\nFinding tests in NoName\nTrying:\n    list(expand_mask('11001'))\nExpecting:\n    ['11001']\nok\nTrying:\n    list(expand_mask('X0X1'))\nExpecting:\n    ['0001', '0011', '1001', '1011']\nok\nFinding tests in NoName\nTrying:\n    list(expand_addr(42, '000000000000000000000000000000X1001X'))\nExpecting:\n    [26, 27, 58, 59]\nok\nFinding tests in NoName\nTrying:\n    program = ['mask = XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X',\n               'mem[8] = 11', 'mem[7] = 101', 'mem[8] = 0']\nExpecting nothing\nok\nTrying:\n    run_program(program)\nExpecting:\n    165\nok\nFinding tests in NoName\nTrying:\n    program = ['mask = XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X',\n               'mem[8] = 11', 'mem[7] = 101', 'mem[8] = 0']\nExpecting nothing\nok\nTrying:\n    run_program_v2(program)\nExpecting:\n    208\n"
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    to_binary(12, 4)\n",
+      "Expecting:\n",
+      "    '1100'\n",
+      "ok\n",
+      "Trying:\n",
+      "    to_binary(12, 6)\n",
+      "Expecting:\n",
+      "    '001100'\n",
+      "ok\n",
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    apply_mask(11, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\n",
+      "Expecting:\n",
+      "    73\n",
+      "ok\n",
+      "Trying:\n",
+      "    apply_mask(101, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\n",
+      "Expecting:\n",
+      "    101\n",
+      "ok\n",
+      "Trying:\n",
+      "    apply_mask(0, 'XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X')\n",
+      "Expecting:\n",
+      "    64\n",
+      "ok\n",
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    list(expand_mask('11001'))\n",
+      "Expecting:\n",
+      "    ['11001']\n",
+      "ok\n",
+      "Trying:\n",
+      "    list(expand_mask('X0X1'))\n",
+      "Expecting:\n",
+      "    ['0001', '0011', '1001', '1011']\n",
+      "ok\n",
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    list(expand_addr(42, '000000000000000000000000000000X1001X'))\n",
+      "Expecting:\n",
+      "    [26, 27, 58, 59]\n",
+      "ok\n",
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    program = ['mask = XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X',\n",
+      "               'mem[8] = 11', 'mem[7] = 101', 'mem[8] = 0']\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    run_program(program)\n",
+      "Expecting:\n",
+      "    165\n",
+      "ok\n",
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    program = ['mask = XXXXXXXXXXXXXXXXXXXXXXXXXXXXX1XXXX0X',\n",
+      "               'mem[8] = 11', 'mem[7] = 101', 'mem[8] = 0']\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    run_program_v2(program)\n",
+      "Expecting:\n",
+      "    208\n"
      ]
     },
     {
@@ -671,14 +735,15 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-72-98d7ca16af33>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdoctest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_docstring_examples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexpand_addr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mdoctest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_docstring_examples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_program\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mdoctest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_docstring_examples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_program_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-124-98d7ca16af33>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mdoctest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_docstring_examples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexpand_addr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mdoctest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_docstring_examples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_program\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mdoctest\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun_docstring_examples\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_program_v2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;32mD:\\Anaconda\\envs\\aoc\\lib\\doctest.py\u001b[0m in \u001b[0;36mrun_docstring_examples\u001b[1;34m(f, globs, verbose, name, compileflags, optionflags)\u001b[0m\n\u001b[0;32m   2110\u001b[0m     \u001b[0mrunner\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mDocTestRunner\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moptionflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0moptionflags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2111\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mtest\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mfinder\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mglobs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mglobs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2112\u001b[1;33m         \u001b[0mrunner\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompileflags\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcompileflags\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2113\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2114\u001b[0m \u001b[1;31m######################################################################\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mD:\\Anaconda\\envs\\aoc\\lib\\doctest.py\u001b[0m in \u001b[0;36mrun\u001b[1;34m(self, test, compileflags, out, clear_globs)\u001b[0m\n\u001b[0;32m   1481\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1482\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1483\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__run\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtest\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcompileflags\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1484\u001b[0m         \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1485\u001b[0m             \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstdout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msave_stdout\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32mD:\\Anaconda\\envs\\aoc\\lib\\doctest.py\u001b[0m in \u001b[0;36m__run\u001b[1;34m(self, test, compileflags, out)\u001b[0m\n\u001b[0;32m   1334\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1335\u001b[0m                 \u001b[1;31m# Don't blink!  This is where the user's code gets run.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1336\u001b[1;33m                 exec(compile(example.source, filename, \"single\",\n\u001b[0m\u001b[0;32m   1337\u001b[0m                              compileflags, 1), test.globs)\n\u001b[0;32m   1338\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdebugger\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_continue\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# ==== Example Finished ====\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m<doctest NoName[1]>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
       "\u001b[1;32m<ipython-input-69-5825af93da1e>\u001b[0m in \u001b[0;36mrun_program_v2\u001b[1;34m(program)\u001b[0m\n\u001b[0;32m     93\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     94\u001b[0m             \u001b[0maddr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mval\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0moperands\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 95\u001b[1;33m             \u001b[1;32mfor\u001b[0m \u001b[0maddr\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mexpand_addr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maddr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     96\u001b[0m                 \u001b[0mmem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0maddr\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mval\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     97\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmem\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m<ipython-input-69-5825af93da1e>\u001b[0m in \u001b[0;36mexpand_addr\u001b[1;34m(addr, mask)\u001b[0m\n\u001b[0;32m     48\u001b[0m     masked_addr = ''.join(m if m in ('1', 'X') else a \n\u001b[0;32m     49\u001b[0m                           for a, m in zip(to_binary(addr), mask))\n\u001b[1;32m---> 50\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mexp\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mexpand_mask\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmasked_addr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     51\u001b[0m         \u001b[1;32myield\u001b[0m \u001b[0mto_decimal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-69-5825af93da1e>\u001b[0m in \u001b[0;36mexpand_mask\u001b[1;34m(mask)\u001b[0m\n\u001b[0;32m     37\u001b[0m         \u001b[0mexp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mbit\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mto_binary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwildcards\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 39\u001b[1;33m             \u001b[0mexp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mexp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'X'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     40\u001b[0m         \u001b[1;32myield\u001b[0m \u001b[0mexp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     41\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-69-5825af93da1e>\u001b[0m in \u001b[0;36mexpand_mask\u001b[1;34m(mask)\u001b[0m\n\u001b[0;32m     36\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0msample\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m**\u001b[0m\u001b[0mwildcards\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     37\u001b[0m         \u001b[0mexp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 38\u001b[1;33m         \u001b[1;32mfor\u001b[0m \u001b[0mbit\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mto_binary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msample\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwildcards\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     39\u001b[0m             \u001b[0mexp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mexp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreplace\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'X'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbit\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m         \u001b[1;32myield\u001b[0m \u001b[0mexp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-69-5825af93da1e>\u001b[0m in \u001b[0;36mto_binary\u001b[1;34m(x, width)\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mdef\u001b[0m \u001b[0mto_binary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m36\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \"\"\"\n\u001b[0;32m      3\u001b[0m     \u001b[1;33m>>\u001b[0m\u001b[1;33m>\u001b[0m \u001b[0mto_binary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;34m'1100'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;33m>>\u001b[0m\u001b[1;33m>\u001b[0m \u001b[0mto_binary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m12\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -714,6 +779,92 @@
     "    program = f.readlines()\n",
     "    print('Part 1: ', run_program(program))\n",
     "    print('Part 2: ', run_program_v2(program))"
+   ]
+  },
+  {
+   "source": [
+    "# Day 15: Rambunctious Recitation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def play(starting_seq):\n",
+    "    \"\"\"\n",
+    "    >>> list(itertools.islice(play([0, 3, 6]), 10))\n",
+    "    [0, 3, 6, 0, 3, 3, 1, 0, 4, 0]\n",
+    "    \"\"\"\n",
+    "    yield from starting_seq\n",
+    "\n",
+    "    last_seen_at = {n: i+1 for i, n in enumerate(starting_seq)}\n",
+    "    current_turn = len(starting_seq) + 1\n",
+    "    n = starting_seq[-1]\n",
+    "\n",
+    "    while True:\n",
+    "        n_turn = last_seen_at.get(n, current_turn)\n",
+    "        last_seen_at[n] = current_turn - 1\n",
+    "        if n_turn < current_turn - 1:\n",
+    "            n = current_turn - n_turn - 1 \n",
+    "        else:\n",
+    "            n = 0\n",
+    "        \n",
+    "        yield n\n",
+    "        current_turn += 1\n",
+    "\n",
+    "def nth_spoken(seq, n):\n",
+    "    \"\"\"\n",
+    "    >>> nth_spoken(play([0, 3, 6]), 1)\n",
+    "    0\n",
+    "    >>> nth_spoken(play([0, 3, 6]), 9)\n",
+    "    4\n",
+    "    \"\"\"\n",
+    "    return next(itertools.islice(seq, n-1, None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    list(itertools.islice(play([0, 3, 6]), 10))\nExpecting:\n    [0, 3, 6, 0, 3, 3, 1, 0, 4, 0]\nok\nFinding tests in NoName\nTrying:\n    nth_spoken(play([0, 3, 6]), 1)\nExpecting:\n    0\nok\nTrying:\n    nth_spoken(play([0, 3, 6]), 9)\nExpecting:\n    4\nok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(play, globs=None, verbose=True)\r\n",
+    "doctest.run_docstring_examples(nth_spoken, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  959\n",
+      "Part 2:  116590\n",
+      "Wall time: 20.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Final answers\n",
+    "starting_seq = [18,11,9,0,5,1]\n",
+    "print('Part 1: ', nth_spoken(play(starting_seq), 2020))\n",
+    "print('Part 2: ', nth_spoken(play(starting_seq), 30000000))"
    ]
   }
  ]
