--- a/Day 1 - 5.ipynb
+++ b/Day 1 - 5.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,8 @@
     "import functools\n",
     "import itertools\n",
     "import math\n",
-    "import re"
+    "import re\n",
+    "from utils import product"
    ]
   },
   {
@@ -62,8 +63,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "product = lambda ps: functools.reduce(lambda x, y: x * y, ps, 1)\n",
-    "\n",
     "def pick_numbers_that_sum_to(ns, pick_n, target):\n",
     "    \"\"\"\n",
     "    Returns first `pick_n` numbers in `ns` to sum to `target`.\n",
