--- a/Day 16 - 20.ipynb
+++ b/Day 16 - 20.ipynb
@@ -172,10 +172,15 @@
     "    return list(s)[0]\n",
     "\n",
     "def guess_fields(valid_ranges, your_ticket, other_tickets):\n",
+    "    # Step 1: Come up with possible guesses based on which fields' valid ranges are\n",
+    "    # compatible with the values encountered in tickets.\n",
     "    guesses = []\n",
     "    tickets = valid_tickets(valid_ranges, other_tickets + [your_ticket])\n",
     "    for values in zip(*tickets):\n",
     "        guesses.append(set(guess_field(valid_ranges, values)))\n",
+    "\n",
+    "    # Step 2: Prune guesses until there's only one choice for each field, or a contradiction \n",
+    "    # is hit (an empty set is left).\n",
     "    while True:\n",
     "        updated = False\n",
     "        \n",
