--- a/Day 16 - 20.ipynb
+++ b/Day 16 - 20.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,8 @@
     "import math\n",
     "import re\n",
     "from copy import deepcopy\n",
-    "from utils import product"
+    "from utils import product\n",
+    "from enum import Enum"
    ]
   },
   {
@@ -247,6 +248,166 @@
     "    \n",
     "    fields = guess_fields(valid_ranges, your_ticket, other_tickets)\n",
     "    print('Part 2: ', product(value for field, value in zip(fields, your_ticket) if field.startswith('departure')))"
+   ]
+  },
+  {
+   "source": [
+    "# Day 17: Conway Cubes"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ds = (-1, 0, 1)\n",
+    "\n",
+    "class CubeState(Enum):\n",
+    "    INACTIVE = 0\n",
+    "    ACTIVE = 1\n",
+    "\n",
+    "CubeGrid = lambda init={}: defaultdict(lambda: CubeState.INACTIVE, init)\n",
+    "\n",
+    "def neighboring_cells(cell):\n",
+    "    \"\"\"\n",
+    "    >>> list(neighboring_cells((0, 0)))\n",
+    "    [(-1, -1), (-1, 0), (-1, 1), (0, -1), (0, 1), (1, -1), (1, 0), (1, 1)]\n",
+    "    >>> len(list(neighboring_cells((0, 0, 0))))\n",
+    "    26\n",
+    "    >>> len(list(neighboring_cells((-1, 0, 0, 1))))\n",
+    "    80\n",
+    "    \"\"\"\n",
+    "    for deltas in itertools.product(*[ds]*len(cell)):\n",
+    "        if all(d == 0 for d in deltas): continue\n",
+    "        yield tuple(c+d for c, d in zip(cell, deltas))\n",
+    "\n",
+    "def parse_state(state_2d, dims=3):\n",
+    "    rows = state_2d.strip().splitlines()\n",
+    "    state_3d = CubeGrid()\n",
+    "    for y, row in enumerate(rows):\n",
+    "        for x, state in enumerate(row.strip()):\n",
+    "            coord = (x, y) + (0,) * (dims - 2)\n",
+    "            state_3d[coord] = CubeState.INACTIVE if state == '.' else CubeState.ACTIVE\n",
+    "    return state_3d\n",
+    "\n",
+    "def num_active(state):\n",
+    "    return sum(cell_state.value for cell_state in state.values())\n",
+    "\n",
+    "def step(initial_state, n_steps=1):\n",
+    "    \"\"\"\n",
+    "    >>> initial_state = parse_state('''\n",
+    "    ...    .#.\n",
+    "    ...    ..#\n",
+    "    ...    ###\n",
+    "    ... ''')\n",
+    "    >>> num_active(step(initial_state, n_steps=6))\n",
+    "    112\n",
+    "    \"\"\"\n",
+    "    prev_state = CubeGrid(initial_state)\n",
+    "    \n",
+    "    while n_steps > 0:\n",
+    "        # Visit cells and their neighbors this iteration, extending the boundary\n",
+    "        # of visited cells by one.\n",
+    "        to_visit = set(prev_state.keys())\n",
+    "        for cell in prev_state:\n",
+    "            to_visit.update(neighboring_cells(cell))\n",
+    "        #print('Steps remaining', n_steps, ', cells to visit', len(to_visit))\n",
+    "\n",
+    "        # Perform a single update step.\n",
+    "        next_state = CubeGrid()\n",
+    "        for cell in to_visit:\n",
+    "            state = prev_state[cell]\n",
+    "            # Count the number of living neighbors and update current state.\n",
+    "            live_neighbors = sum(prev_state[n].value for n in neighboring_cells(cell))\n",
+    "            if state == CubeState.ACTIVE and live_neighbors not in (2, 3):\n",
+    "                next_state[cell] = CubeState.INACTIVE\n",
+    "            elif state == CubeState.INACTIVE and live_neighbors == 3:\n",
+    "                next_state[cell] = CubeState.ACTIVE\n",
+    "            else:\n",
+    "                next_state[cell] = state\n",
+    "\n",
+    "        prev_state = next_state\n",
+    "        n_steps -= 1\n",
+    "    \n",
+    "    return prev_state\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    list(neighboring_cells((0, 0)))\n",
+      "Expecting:\n",
+      "    [(-1, -1), (-1, 0), (-1, 1), (0, -1), (0, 1), (1, -1), (1, 0), (1, 1)]\n",
+      "ok\n",
+      "Trying:\n",
+      "    len(list(neighboring_cells((0, 0, 0))))\n",
+      "Expecting:\n",
+      "    26\n",
+      "ok\n",
+      "Trying:\n",
+      "    len(list(neighboring_cells((-1, 0, 0, 1))))\n",
+      "Expecting:\n",
+      "    80\n",
+      "ok\n",
+      "Finding tests in NoName\n",
+      "Trying:\n",
+      "    initial_state = parse_state('''\n",
+      "       .#.\n",
+      "       ..#\n",
+      "       ###\n",
+      "    ''')\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    num_active(step(initial_state, n_steps=6))\n",
+      "Expecting:\n",
+      "    112\n",
+      "ok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(neighboring_cells, globs=None, verbose=True)\r\n",
+    "doctest.run_docstring_examples(step, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  306\n",
+      "Part 2:  2572\n",
+      "Wall time: 47.8 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Final answers\n",
+    "with open('day17.txt') as f:\n",
+    "    initial_state_2d = f.read()\n",
+    "    initial_state_3d = parse_state(initial_state_2d, dims=3)\n",
+    "    print('Part 1: ', num_active(step(initial_state_3d, 6)))\n",
+    "    \n",
+    "    initial_state_4d = parse_state(initial_state_2d, dims=4)\n",
+    "    print('Part 2: ', num_active(step(initial_state_4d, 6)))"
    ]
   }
  ]
