--- a/Day 16 - 20.ipynb
+++ b/Day 16 - 20.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,6 +408,222 @@
     "    \n",
     "    initial_state_4d = parse_state(initial_state_2d, dims=4)\n",
     "    print('Part 2: ', num_active(step(initial_state_4d, 6)))"
+   ]
+  },
+  {
+   "source": [
+    "# Day 18: Operation Order"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "OPS = {\n",
+    "    '*': lambda a, b: a * b,\n",
+    "    '+': lambda a, b: a + b\n",
+    "}\n",
+    "\n",
+    "def tokenize(expr):\n",
+    "    \"\"\"\n",
+    "    >>> tokenize('1 + 2 * 3 + 4 * 5 + 6')\n",
+    "    ['1', '+', '2', '*', '3', '+', '4', '*', '5', '+', '6']\n",
+    "    >>> tokenize('1 + (2 * 3) + (4 * (5 + 6))')\n",
+    "    ['1', '+', '(', '2', '*', '3', ')', '+', '(', '4', '*', '(', '5', '+', '6', ')', ')']\n",
+    "    \"\"\"\n",
+    "    return expr.replace('(', '( ').replace(')', ' )').split(' ')\n",
+    "\n",
+    "def parse_next(tokens, idx, stack):\n",
+    "    if idx >= len(tokens):\n",
+    "        return idx\n",
+    "    token = tokens[idx]\n",
+    "    if token == '(':\n",
+    "        idx = idx + 1\n",
+    "        while True:\n",
+    "            idx = parse_next(tokens, idx, stack)\n",
+    "            if stack[-1] == ')':\n",
+    "                stack.pop()\n",
+    "                return idx\n",
+    "    elif token == ')':\n",
+    "        stack.append(token)\n",
+    "        return idx + 1\n",
+    "    elif token in ('*', '+'):\n",
+    "        idx = parse_next(tokens, idx + 1, stack)\n",
+    "        b, a = stack.pop(), stack.pop()\n",
+    "        stack.append([token, a, b])\n",
+    "        return idx\n",
+    "    else:\n",
+    "        stack.append(int(token))\n",
+    "        return idx + 1\n",
+    "\n",
+    "def parse(tokens):\n",
+    "    \"\"\"\n",
+    "    >>> parse(tokenize('1 * 2 + 3'))\n",
+    "    ['+', ['*', 1, 2], 3]\n",
+    "    >>> parse(tokenize('(2 * 3) + (1 * (4 + 5))'))\n",
+    "    ['+', ['*', 2, 3], ['*', 1, ['+', 4, 5]]]\n",
+    "    \"\"\"\n",
+    "    idx = 0\n",
+    "    stack = []\n",
+    "    while idx < len(tokens):\n",
+    "        idx = parse_next(tokens, idx, stack)\n",
+    "    return stack.pop()\n",
+    "\n",
+    "def evaluate(parsed):\n",
+    "    \"\"\"\n",
+    "    >>> evaluate(parse(tokenize('1 * 2 + 3')))\n",
+    "    5\n",
+    "    >>> evaluate(parse(tokenize('(2 * 3) + (1 * (4 + 5))')))\n",
+    "    15\n",
+    "    \"\"\"\n",
+    "    if isinstance(parsed, int): return parsed\n",
+    "    op, a, b = parsed[0], evaluate(parsed[1]), evaluate(parsed[2])\n",
+    "    return OPS[op](a, b)\n",
+    "\n",
+    "def parse_and_evaluate(expr):\n",
+    "    return evaluate(parse(tokenize(expr.strip())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    tokenize('1 + 2 * 3 + 4 * 5 + 6')\nExpecting:\n    ['1', '+', '2', '*', '3', '+', '4', '*', '5', '+', '6']\nok\nTrying:\n    tokenize('1 + (2 * 3) + (4 * (5 + 6))')\nExpecting:\n    ['1', '+', '(', '2', '*', '3', ')', '+', '(', '4', '*', '(', '5', '+', '6', ')', ')']\nok\nFinding tests in NoName\nTrying:\n    parse(tokenize('1 * 2 + 3'))\nExpecting:\n    ['+', ['*', 1, 2], 3]\nok\nTrying:\n    parse(tokenize('(2 * 3) + (1 * (4 + 5))'))\nExpecting:\n    ['+', ['*', 2, 3], ['*', 1, ['+', 4, 5]]]\nok\nFinding tests in NoName\nTrying:\n    evaluate(parse(tokenize('1 * 2 + 3')))\nExpecting:\n    5\nok\nTrying:\n    evaluate(parse(tokenize('(2 * 3) + (1 * (4 + 5))')))\nExpecting:\n    15\nok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(tokenize, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(parse, globs=None, verbose=True)\n",
+    "doctest.run_docstring_examples(evaluate, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def end_of(tokens, idx):\n",
+    "    stack = [tokens[idx]]\n",
+    "    for idx in range(idx + 1, len(tokens)):\n",
+    "        if tokens[idx] == '(':\n",
+    "            stack.append(tokens[idx])\n",
+    "        elif tokens[idx] == ')':\n",
+    "            stack.pop()\n",
+    "        if not stack:\n",
+    "            return idx\n",
+    "\n",
+    "    \n",
+    "def parse_groups(tokens):\n",
+    "    terms = []\n",
+    "    idx = 0\n",
+    "    while idx < len(tokens):\n",
+    "        token = tokens[idx]\n",
+    "        if token == '(':\n",
+    "            end = end_of(tokens, idx)\n",
+    "            group_tokens = tokens[idx+1:end]\n",
+    "            terms.append(parse_groups(group_tokens))\n",
+    "            idx = end\n",
+    "        elif token in OPS:\n",
+    "            terms.append(token)\n",
+    "        elif token != ')':\n",
+    "            terms.append(int(token))\n",
+    "        idx += 1\n",
+    "    return terms\n",
+    "\n",
+    "\n",
+    "def evaluate_op(terms, op):\n",
+    "    # Return early if it's an operator or number.\n",
+    "    if isinstance(terms, str) or isinstance(terms, int):\n",
+    "        return terms\n",
+    "    # Otherwise, it's a complex expression: simplify all terms.\n",
+    "    terms = [evaluate_op(term, op) for term in terms]\n",
+    "    idx = 0\n",
+    "    result = []\n",
+    "    while idx < len(terms):\n",
+    "        term = terms[idx]\n",
+    "        if term == op:\n",
+    "            lhs = result.pop()\n",
+    "            rhs = terms[idx+1]\n",
+    "            # Evaluate it on the spot.\n",
+    "            result.append(OPS[op](lhs, rhs))\n",
+    "            idx += 2\n",
+    "        else:\n",
+    "            result.append(term)\n",
+    "            idx += 1\n",
+    "    return result[0] if len(result) == 1 else result\n",
+    "\n",
+    "\n",
+    "def evaluate_advanced(terms, precedence='+*'):\n",
+    "    terms = [evaluate_advanced(term, precedence) if isinstance(term, list) else term\n",
+    "             for term in terms]\n",
+    "    for op in precedence:\n",
+    "        terms = evaluate_op(terms, op)\n",
+    "    return terms\n",
+    "\n",
+    "def parse_and_evaluate_advanced(expr):\n",
+    "    \"\"\"\n",
+    "    >>> parse_and_evaluate_advanced('1 + 2 * 3 + 4 * 5 + 6')\n",
+    "    231\n",
+    "    >>> parse_and_evaluate_advanced('2 * 3 + (4 * 5)')\n",
+    "    46\n",
+    "    >>> parse_and_evaluate_advanced('5 * 9 * (7 * 3 * 3 + 9 * 3 + (8 + 6 * 4))')\n",
+    "    669060\n",
+    "    >>> parse_and_evaluate_advanced('1 + (2 * 3) + (4 * (5 + 6))')\n",
+    "    51\n",
+    "    >>> parse_and_evaluate_advanced('((2 + 4 * 9) * (6 + 9 * 8 + 6) + 6) + 2 + 4 * 2')\n",
+    "    23340\n",
+    "    \"\"\"\n",
+    "    return evaluate_advanced(parse_groups(tokenize(expr.strip())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Finding tests in NoName\nTrying:\n    parse_and_evaluate_advanced('1 + 2 * 3 + 4 * 5 + 6')\nExpecting:\n    231\nok\nTrying:\n    parse_and_evaluate_advanced('2 * 3 + (4 * 5)')\nExpecting:\n    46\nok\nTrying:\n    parse_and_evaluate_advanced('5 * 9 * (7 * 3 * 3 + 9 * 3 + (8 + 6 * 4))')\nExpecting:\n    669060\nok\nTrying:\n    parse_and_evaluate_advanced('1 + (2 * 3) + (4 * (5 + 6))')\nExpecting:\n    51\nok\nTrying:\n    parse_and_evaluate_advanced('((2 + 4 * 9) * (6 + 9 * 8 + 6) + 6) + 2 + 4 * 2')\nExpecting:\n    23340\nok\n"
+     ]
+    }
+   ],
+   "source": [
+    "doctest.run_docstring_examples(parse_and_evaluate_advanced, globs=None, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Part 1:  5783053349377\nPart 2:  74821486966872\nWall time: 42 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# Final answers\n",
+    "with open('day18.txt') as f:\n",
+    "    exprs = [e.strip() for e in f]\n",
+    "    print('Part 1: ', sum(parse_and_evaluate(e) for e in exprs))\n",
+    "    print('Part 2: ', sum(parse_and_evaluate_advanced(e) for e in exprs))"
    ]
   }
  ]
